Following PMD advices for tests
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>